Changes to readme.md

--- a/notebooks/FWA Modelling.ipynb
+++ b/notebooks/FWA Modelling.ipynb
@@ -1858,8 +1858,6 @@
     "# Number of claims per provider\n",
     "data['provider_claims_frequency'] = data.groupby('Provider ID')['Claim ID'].transform('count')\n",
     "\n",
-    "\n",
-    "\n",
     "# Selecting target and features\n",
     "y = data['Fraudulent']\n",
     "X = data[['Claim Amount', 'high_claim_flag', 'member_claims_frequency', 'provider_claims_frequency', 'Previous Claims', 'Member Age', 'Location']]\n",
@@ -1914,7 +1912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "FWA Modelling",
+   "display_name": "Retracement Trader",
    "language": "python",
    "name": ".venv"
   },
