test changes from codespace

--- a/notebooks/FWA Modelling.ipynb
+++ b/notebooks/FWA Modelling.ipynb
@@ -1912,7 +1912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Retracement Trader",
+   "display_name": "FWA Claims Analysis",
    "language": "python",
    "name": ".venv"
   },
@@ -1926,7 +1926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
