first SMOTE commit

--- a/notebooks/FWA Modelling - SMOTE.ipynb
+++ b/notebooks/FWA Modelling - SMOTE.ipynb
@@ -17,6 +17,7 @@
     "import seaborn as sns\n",
     "\n",
     "from imblearn.over_sampling import SMOTE\n",
+    "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
@@ -32,6 +33,17 @@
    "metadata": {},
    "source": [
     "# Case Study: Claims Assessment for Fraud, Waste,and Abuse (FWA) Using Mathematical Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e298327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Preprocessing Pipeline\n",
+    "\n"
    ]
   },
   {
@@ -1990,9 +2002,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "FWA Claims Analysis",
+   "display_name": ".venv",
    "language": "python",
-   "name": ".venv-fwa_claims_analysis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
